--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -166,7 +166,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlight_line_ending_if_two_or_more_spaces">Tõstab esile vähemalt kahe tühikuga rea lõpud</string>
     <string name="use_monospace_for_code">Kasuta koodile püsiva laiusega fonti</string>
     <string name="disable_code_block_highlight">Keela koodiplokkide esiletõstmine</string>
+    <string name="auto_renumber_ordered_list">Nummerda nimekirjad uuesti</string>
+    <string name="auto_renumber_ordered_list_slowdown">See valik mõjutab rakenduse jõudlust.</string>
+    <string name="use_different_fonttype_slow_down">Kasuta erinevat fonditüüpi. Jooksev muutmine mõjutab rakenuse jõudlust.</string>
     <string name="general">Üldine</string>
+    <string name="resources">Vahendid</string>
     <string name="open_source_licenses">Avatud lähtekoodiga litsentsid</string>
     <string name="rate_this_app">Hinda seda rakendust</string>
     <string name="translate">Tõlgi</string>
