[ci skip] Update translations (Estonian)

--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -171,6 +171,21 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="use_different_fonttype_slow_down">Kasuta erinevat fonditüüpi. Jooksev muutmine mõjutab rakenuse jõudlust.</string>
     <string name="general">Üldine</string>
     <string name="resources">Vahendid</string>
+    <string name="space_between_lines_in_percent">Ridade vahekaugus protsentides</string>
+    <string name="line_spacing">Ridade vahe</string>
+    <string name="archive_does_move_done_tasks">Liiguta lõpetatud ülesanded eraldi faili samas kaustas</string>
+    <string name="sort_tasks_by_selected_order">Järjesta ülesanded valitud järjekorda</string>
+    <string name="special_key">Eriklahvid</string>
+    <string name="asciidoc_special_key">Eriline AsciiDoc sisu</string>
+    <string name="key_page_up">Eelmine lehekülg(Page Up)</string>
+    <string name="key_page_down">Järgmine lehekülg (Page Down)</string>
+    <string name="move_text_one_line_up">Liiguta tekstirida ülesse</string>
+    <string name="move_text_one_line_down">Liiguta tekstirida alla</string>
+    <string name="start_new_line_below">Alusta uue reaga all</string>
+    <string name="key_pos_1">Rea algus(Pos Home)</string>
+    <string name="key_pos_end">Rea lõpp(Pos End)</string>
+    <string name="key_pos_1_document">Kirjutise algus</string>
+    <string name="key_pos_end_document">Kirjutise lõpp</string>
     <string name="open_source_licenses">Avatud lähtekoodiga litsentsid</string>
     <string name="rate_this_app">Hinda seda rakendust</string>
     <string name="translate">Tõlgi</string>
