[ci skip] Update translations (Estonian)

--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -186,6 +186,20 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_pos_end">Rea lõpp(Pos End)</string>
     <string name="key_pos_1_document">Kirjutise algus</string>
     <string name="key_pos_end_document">Kirjutise lõpp</string>
+    <string name="key_ctrl_a">Vali kõik (Ctrl+A)</string>
+    <string name="key_tab">Tabeldaja</string>
+    <string name="start_on_bottom">Alusta lõpus</string>
+    <string name="start_on_bottom_when_loading_document">Kirjutist laadides jääb osuti selle lõppu</string>
+    <string name="unordered_list_character">Korrastamata nimekirja tähis</string>
+    <string name="character_to_start_items_of_unordered_list_with">Milline märk tähistab korrastamata nimekirju</string>
+    <string name="unordered_list_char_dash">Sidekriips (-)</string>
+    <string name="unordered_list_char_asterisk">Tärn (*)</string>
+    <string name="unordered_list_char_plus">Pluss (+)</string>
+    <string name="filemanager_doesnot_supply_required_data__appspecific">Markor toimetab ainult kohalike failidega ja selliste failihalduritega mis pakuvad täielikku failiteed.</string>
+    <string name="file_does_not_exist_and_cant_be_created">Faili või kataloogi ei ole või ei saa luua</string>
+    <string name="permissions">Load</string>
+    <string name="permission_paths_revert">Kas taastada vaikimisi failiteed?</string>
+    <string name="permission_not_granted">Luba pole tagatud</string>
     <string name="open_source_licenses">Avatud lähtekoodiga litsentsid</string>
     <string name="rate_this_app">Hinda seda rakendust</string>
     <string name="translate">Tõlgi</string>
