[ci skip] Update translations (Estonian)

--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -210,6 +210,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="bottom">All</string>
     <string name="center">Keskel</string>
     <string name="actionbutton_spacing">Toimingunuppude vahe</string>
+    <string name="horizontal_space_between_actionbuttons">Toimungunuppude vahe</string>
+    <string name="center_text">Keskjoonda tekst</string>
+    <string name="edit_text_in_center_of_screen">Toimeta teksti ekraani keskel</string>
+    <string name="clipboard">Lõikelaud</string>
+    <string name="select_existing_document">Vali olemasolev kirjutis</string>
     <string name="open_source_licenses">Avatud lähtekoodiga litsentsid</string>
     <string name="rate_this_app">Hinda seda rakendust</string>
     <string name="translate">Tõlgi</string>
@@ -223,12 +228,23 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="contribute_code_to_this_project_anybody_welcome">Lisage projekti kood. Kõik on oodatud seda tegema, ka uued tulijad</string>
     <string name="project_team">Projekti tiim</string>
     <string name="contributors_public_add_yourself_description">Kuva kaastöötajateave. Esitage see, et see kuvatakse siin pärast panuse andmist, kui soovite</string>
+    <string name="descending">kahanev</string>
+    <string name="ascending">suurenev</string>
+    <string name="disable_spelling_underline">Keela kirjavigade allajoonimine</string>
+    <string name="spellcheck_keyboard_suggestion_stay_red_underline_vanishes">Sõnasoovitused jäävad, punased allajoonimised kaovad</string>
+    <string name="location">Asukoht</string>
+    <string name="text_lines">Tekstiread</string>
+    <string name="text_characters">Teksti tähemärgid</string>
+    <string name="text_words">Teksti sõnad</string>
+    <string name="directory">Kataloog</string>
+    <string name="recently_viewed_documents">Hiljuti vaadatud kirjutised</string>
     <string name="error_picture_selection">Ühtegi pilti pole valitud, tehtud ega salvestatud.</string>
     <string name="edit_picture">Redigeeri pilti</string>
     <string name="miscellaneous">Mitmesugune</string>
     <string name="background">Taust</string>
     <string name="font">Kirjatüüp</string>
     <string name="close">Sulge</string>
+    <string name="todo_is_the_easiest_way_">Halda oma ülesandeid TodDo abil. See on faili todo.txt vormingus vaikimisi asukohas &gt;Notebook/todo.txt&lt;, mille failiteed saad seadetes muuta.</string>
     <string name="favourite">Lemmik</string>
     <string name="rotate">Pööra</string>
     <string name="attachment_folder_name">Manuste kausta nimi</string>
