[ci skip] Update translations (Estonian)

--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -238,15 +238,78 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="text_words">Teksti sõnad</string>
     <string name="directory">Kataloog</string>
     <string name="recently_viewed_documents">Hiljuti vaadatud kirjutised</string>
+    <string name="details">Üksikasjad</string>
+    <string name="calendar">Kalender</string>
+    <string name="warning_disallowed_sd_access">Hoiatus! Rakendusel puudub selle faili salvestamise luba, kõik muutused saavas kaduma. Android keelab igasuguse ligipääsu ja olukord on lahendamatu.</string>
     <string name="error_picture_selection">Ühtegi pilti pole valitud, tehtud ega salvestatud.</string>
+    <string name="gallery_picture">Pilt galeriist</string>
+    <string name="camera_picture">Pilt kaameraga</string>
+    <string name="enable_undo_and_redo_be_patient">Luba taastamise ja taastegemise toimingud. Sobib ainult keerkaks tööks, ole tähelepanelik. Sulge ja taasava toimeti ajaloo kustutamiseks.</string>
+    <string name="description">Kirjeldus</string>
     <string name="edit_picture">Redigeeri pilti</string>
+    <string name="math">Matemaatika</string>
     <string name="miscellaneous">Mitmesugune</string>
     <string name="background">Taust</string>
     <string name="font">Kirjatüüp</string>
     <string name="close">Sulge</string>
     <string name="todo_is_the_easiest_way_">Halda oma ülesandeid TodDo abil. See on faili todo.txt vormingus vaikimisi asukohas &gt;Notebook/todo.txt&lt;, mille failiteed saad seadetes muuta.</string>
+    <string name="navigationbar_color">Liikumisriba värv</string>
+    <string name="black">Must</string>
+    <string name="white">Valge</string>
+    <string name="view">Vaade</string>
+    <string name="view_mode">Vaate olek</string>
+    <string name="edit_mode">Toimeti olek</string>
+    <string name="mount_storage">Ühenda hoidla</string>
+    <string name="application_needs_access_to_storage_mount_it">Selles hoidlas tegutsemiseks on vaja luba. Loa andmiseks ühenda see hoidla. Kinnita see dialoog vastava hüpikakna nägemiseks. Vali sealt see hoidla ja toksa vali.</string>
+    <string name="share_into">Jaga teavet</string>
     <string name="favourite">Lemmik</string>
+    <string name="favourites">Lemmikud</string>
+    <string name="please_wait">Palun oota</string>
+    <string name="app_start_folder">Rakenduse alustamise kaust</string>
+    <string name="tab_width">Lapaka laius</string>
+    <string name="amount_of_space_for_tab">Tühikute hulk tabelduse näitamisel</string>
+    <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">Valitud fail võib olla lihttekst. Kas Sa tahad selle avada toimetis või teises rakenduses?\n\nÄra proovi avada kahendfaile. Kui Sa pole kindel, ava teises rakenduses.</string>
+    <string name="list_in_recent_files">Hiljutiste failide loendisse</string>
+    <string name="reload">Lae uuesti</string>
+    <string name="wrap_words">Reamurdmine</string>
+    <string name="line_numbers">Reanumbrid</string>
+    <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">Pehme murdmine, kui tekst ei mahu ekraanilaiusesse. Muidu luba rõht kerimine.</string>
+    <string name="recursive_search_in_current_directory">Sügav otsing praeguses kataloogis.</string>
+    <string name="always_open_with_this_app">Alati ava selle rakendusega</string>
+    <string name="always_open_files_with_this_app_when_list_contains_file_extension">Alati ava faile selles rakenduses kui nimekirjas on faililaiend. Näiteks kasuta \'None, .html, .css, .js\' veebifailidele ja neile millel pole nimelaiendit.</string>
+    <string name="open_file_with">Ava fail sellega</string>
     <string name="rotate">Pööra</string>
+    <string name="template">Näidis</string>
+    <string name="send_debug_log">Saada vealogi</string>
+    <string name="print_pdf">Trüki / PDF</string>
+    <string name="bigger_headings">Suurenda pealkirju</string>
+    <string name="increase_text_size_of_headings_according_to_level">Suurenda pealkirjade teksti vastavalt tasemele (# h1, ## h2, ### h3...)</string>
+    <string name="current">Praegune</string>
+    <string name="record_audio">Jäädvusta heli</string>
+    <string name="attach">Kinnita</string>
+    <string name="copy_file">Kopeeri fail</string>
+    <string name="page">Lehekülg</string>
+    <string name="experimental_features">Katselised võimalused</string>
+    <string name="tools">Tööriistad</string>
+    <string name="reading">Lugemine</string>
+    <string name="read">Loe</string>
+    <string name="table">Tabel</string>
+    <string name="how_much_columns_press_table_button_long_to_start_table">Mitu veergu? Vajuta tabeli nuppu pikalt ja alusta tabeliga( lisa päis), vajuta lühidalt ja lisa rida.</string>
+    <string name="example_of_a_markdown_table">Markdowni tabeli näidis</string>
+    <string name="delete_lines">Kustuta read</string>
+    <string name="unordered_list">Korrastamata nimekiri</string>
+    <string name="ordered_list">Korrastatud nimekiri</string>
+    <string name="check_list">Märkeruutudega nimekiri</string>
+    <string name="open_link">Ava viide</string>
+    <string name="common_color_picker">Värvivalija</string>
+    <string name="date_and_time">Kuupäev ja kellaaeg</string>
+    <string name="jump_to_bottom">Hüppa lõppu</string>
+    <string name="matches">Vastavused</string>
+    <string name="search_replace_pattern_error_message">Viga otsi ja asenda mustris.</string>
+    <string name="backup_settings">Varundamise seaded</string>
+    <string name="restore_settings">Taasta seaded</string>
+    <string name="failed_to_create_backup">Varunduse loomine ebaõnnestus</string>
+    <string name="export_settings_to_json_file">Väljuta seaded json faili</string>
     <string name="attachment_folder_name">Manuste kausta nimi</string>
     <string name="attachment_folder_name_desc">Praeguse kausta alamkaust manuste hoiustamiseks. Kui jääb tühjaks, manused pannakse praegusesse kausta.</string>
 </resources>
